DIAC-110 turning on fortify